New design for feature item.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="theme-color" content="#d7b098">
     <meta name="description" content="Crashinvaders Official Site">
-    <meta name="author" content="Metaphore">
+    <meta name="author" content="Anton Chekulaev">
     <meta name="google-site-verification" content="DlhZ40EQqdoDURJOcpZPqqfIKhL6ZZ3jtxHP1Wawono">
     <link rel="icon" href="favicon.ico">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
@@ -27,7 +27,7 @@
 
 <body>
 
-<div class="header-frame">
+<div class="header-pane">
     <img class="header-logo" src="images/crash-logo.png"/>
 </div>
 
@@ -62,7 +62,7 @@
     </div>
 
     <div class="feature-section">
-
+v
         <div class="feature-item">
             <div class="thumb-image-container">
                 <div class="cycler" data-thumb-cycle-images="
@@ -75,25 +75,27 @@
                 <img class="thumb-icon" src="images/icon-getreact.png"/>
                 <div class="thumb-image-dim" style="background-color: #5880a7"></div>
             </div>
-            <p class="thumb-title">Dash React</p>
-            <p class="thumb-desc">Old fashion procedural hardcore arcade</p>
-            <div class="thumb-links-pane">
-                <p class="thumb-available-text">Re-release soon:</p>
-                <div style="display: inline-block"><!--
-              <a class="btn-app-link appstore" target="_blank"
-                 href="https://itunes.apple.com/app/id1075864120"></a>
-              <a class="btn-app-link android" target="_blank"
-                 href="https://play.google.com/store/apps/details?id=com.crashinvaders.magnetter.android"></a>  -->
-                    <a href="#" class="btn-app-link appstore disabled">
-                        <img class="soon-badge" src="images/soon-badge.png"/>
-                    </a>
-                    <a href="#" class="btn-app-link android disabled">
-                        <img class="soon-badge" src="images/soon-badge.png"/>
-                    </a>
-                    <a class="btn-app-link web" target="_blank"
-                       href="http://crashinvaders.com/getreact"></a>
+            <div class="feature-frame">
+                <p class="thumb-title">Dash React</p>
+                <p class="thumb-desc">Old fashion procedural hardcore arcade</p>
+                <div class="thumb-links-pane">
+                    <p class="thumb-available-text">Re-release soon:</p>
+                    <div style="display: inline-block">
+    <!--                    <a class="btn-app-link appstore" target="_blank"-->
+    <!--                       href="https://itunes.apple.com/app/id1075864120"></a>-->
+    <!--                    <a class="btn-app-link android" target="_blank"-->
+    <!--                       href="https://play.google.com/store/apps/details?id=com.crashinvaders.magnetter.android"></a>-->
+                        <a href="#" class="btn-app-link appstore disabled">
+                            <img class="soon-badge" src="images/soon-badge.png"/>
+                        </a>
+                        <a href="#" class="btn-app-link android disabled">
+                            <img class="soon-badge" src="images/soon-badge.png"/>
+                        </a>
+                        <a class="btn-app-link web" target="_blank"
+                           href="http://crashinvaders.com/getreact"></a>
+                    </div>
+                    <div class="thumb-release-date-text">--- 2015 ---</div>
                 </div>
-                <div class="thumb-release-date-text">--- 2015 ---</div>
             </div>
         </div>
 
@@ -108,17 +110,19 @@
                 <img class="thumb-icon" src="images/icon-jdog.png"/>
                 <div class="thumb-image-dim" style="background-color: #9f6d08"></div>
             </div>
-            <p class="thumb-title">Jolly Dog</p>
-            <p class="thumb-desc">Simple yet beatiful game for your beloved pet</p>
-            <div class="thumb-links-pane">
-                <p class="thumb-available-text">Available now on:</p>
-                <div style="display: inline-block">
-                    <a class="btn-app-link appstore" target="_blank"
-                       href="https://itunes.apple.com/app/id1153421262"></a>
-                    <a class="btn-app-link android" target="_blank"
-                       href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollydog"></a>
+            <div class="feature-frame">
+                <p class="thumb-title">Jolly Dog</p>
+                <p class="thumb-desc">Simple yet beatiful game for your beloved pet</p>
+                <div class="thumb-links-pane">
+                    <p class="thumb-available-text">Available now on:</p>
+                    <div style="display: inline-block">
+                        <a class="btn-app-link appstore" target="_blank"
+                           href="https://itunes.apple.com/app/id1153421262"></a>
+                        <a class="btn-app-link android" target="_blank"
+                           href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollydog"></a>
+                    </div>
+                    <div class="thumb-release-date-text">--- 2016 ---</div>
                 </div>
-                <div class="thumb-release-date-text">--- 2016 ---</div>
             </div>
         </div>
 
@@ -132,17 +136,19 @@
                 <img class="thumb-icon smooth-render" src="images/icon-seven.png"/>
                 <div class="thumb-image-dim" style="background-color: #15587c"></div>
             </div>
-            <p class="thumb-title">Seven</p>
-            <p class="thumb-desc">One of the most popular drinking games on the mobile market </p>
-            <div class="thumb-links-pane">
-                <p class="thumb-available-text">Available now on:</p>
-                <div style="display: inline-block">
-                    <a href="https://itunes.apple.com/app/id1097472871" target="_blank"
-                       class="btn-app-link appstore"></a>
-                    <a href="https://play.google.com/store/apps/details?id=com.crashinvaders.seven" target="_blank"
-                       class="btn-app-link android"></a>
+            <div class="feature-frame">
+                <p class="thumb-title">Seven</p>
+                <p class="thumb-desc">One of the most popular drinking games on the mobile market </p>
+                <div class="thumb-links-pane">
+                    <p class="thumb-available-text">Available now on:</p>
+                    <div style="display: inline-block">
+                        <a href="https://itunes.apple.com/app/id1097472871" target="_blank"
+                           class="btn-app-link appstore"></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.crashinvaders.seven" target="_blank"
+                           class="btn-app-link android"></a>
+                    </div>
+                    <div class="thumb-release-date-text">--- 2012 ---</div>
                 </div>
-                <div class="thumb-release-date-text">--- 2012 ---</div>
             </div>
         </div>
 
@@ -165,20 +171,22 @@
                 <img class="thumb-icon" src="images/icon-fridge-party.png"/>
                 <div class="thumb-image-dim" style="background-color: #434f6b"></div>
             </div>
-            <p class="thumb-title" style="font-size: 24px; margin-bottom: 6px;">Fridge Party</p>
-            <p class="thumb-desc">Feed the hungry cats with whatever you find in households' fridges
-                before they wake up!</p>
-            <div class="thumb-links-pane">
-                <p class="thumb-available-text">Available now on:</p>
-                <div style="display: inline-block">
-                    <a class="btn-app-link appstore" target="_blank"
-                       href="https://itunes.apple.com/app/id1352761622"></a>
-                    <a class="btn-app-link android" target="_blank"
-                       href="https://play.google.com/store/apps/details?id=com.enmotivo.fridgeparty"></a>
-                    <a class="btn-app-link web" target="_blank"
-                       href="http://fridgeparty.com"></a>
+            <div class="feature-frame">
+                <p class="thumb-title" style="font-size: 24px; margin-bottom: 6px;">Fridge Party</p>
+                <p class="thumb-desc">Feed the hungry cats with whatever you find in households' fridges
+                    before they wake up!</p>
+                <div class="thumb-links-pane">
+                    <p class="thumb-available-text">Available now on:</p>
+                    <div style="display: inline-block">
+                        <a class="btn-app-link appstore" target="_blank"
+                           href="https://itunes.apple.com/app/id1352761622"></a>
+                        <a class="btn-app-link android" target="_blank"
+                           href="https://play.google.com/store/apps/details?id=com.enmotivo.fridgeparty"></a>
+                        <a class="btn-app-link web" target="_blank"
+                           href="http://fridgeparty.com"></a>
+                    </div>
+                    <div class="thumb-release-date-text">--- 2018 ---</div>
                 </div>
-                <div class="thumb-release-date-text">--- 2018 ---</div>
             </div>
         </div>
 
@@ -191,18 +199,20 @@
                 <img class="thumb-icon" src="images/icon-icarus.png"/>
                 <div class="thumb-image-dim" style="background-color: #27679d"></div>
             </div>
-            <p class="thumb-title" style="font-size: 24px; margin-bottom: 6px;">Flying With Icarus</p>
-            <p class="thumb-desc">Arcade for kids with mix of greek mythology and all the things</p>
-            <div class="thumb-links-pane">
-                <p class="thumb-available-text">Available now on:</p>
-                <div style="display: inline-block">
-                    <a class="btn-app-link appstore" target="_blank"
-                       href="https://itunes.apple.com/app/id1110277287"></a>
-                    <a class="btn-app-link android" target="_blank"
-                       href="https://play.google.com/store/apps/details?id=com.ithacanmedia.icarusflight"></a>
+            <div class="feature-frame">
+                <p class="thumb-title" style="font-size: 24px; margin-bottom: 6px;">Flying With Icarus</p>
+                <p class="thumb-desc">Arcade for kids with mix of greek mythology and all the things</p>
+                <div class="thumb-links-pane">
+                    <p class="thumb-available-text">Available now on:</p>
+                    <div style="display: inline-block">
+                        <a class="btn-app-link appstore" target="_blank"
+                           href="https://itunes.apple.com/app/id1110277287"></a>
+                        <a class="btn-app-link android" target="_blank"
+                           href="https://play.google.com/store/apps/details?id=com.ithacanmedia.icarusflight"></a>
+                    </div>
+                    <div class="thumb-release-date-text">--- 2016 ---</div>
                 </div>
-                <div class="thumb-release-date-text">--- 2016 ---</div>
-            </div>
+            </div>>
         </div>
 
     </div>
@@ -224,15 +234,17 @@
                 <img class="thumb-icon" src="images/icon-trashville.png"/>
                 <div class="thumb-image-dim" style="background-color: #3a4937"></div>
             </div>
-            <p class="thumb-title" style="font-size: 24px; margin-bottom: 6px">Trashville Incident</p>
-            <p class="thumb-desc">Slice up your monster and kick all the orcs away</p>
-            <div class="thumb-links-pane">
-                <p class="thumb-available-text">Play it now on:</p>
-                <div style="display: inline-block">
-                    <a class="btn-app-link web" target="_blank"
-                       href="http://crashinvaders.com/trashville"></a>
+            <div class="feature-frame">
+                <p class="thumb-title" style="font-size: 24px; margin-bottom: 6px">Trashville Incident</p>
+                <p class="thumb-desc">Slice up your monster and kick all the orcs away</p>
+                <div class="thumb-links-pane">
+                    <p class="thumb-available-text">Play it now on:</p>
+                    <div style="display: inline-block">
+                        <a class="btn-app-link web" target="_blank"
+                           href="http://crashinvaders.com/trashville"></a>
+                    </div>
+                    <div class="thumb-release-date-text">--- 2015 ---</div>
                 </div>
-                <div class="thumb-release-date-text">--- 2015 ---</div>
             </div>
         </div>
 
@@ -246,15 +258,17 @@
                 <img class="thumb-icon" src="images/icon-thelastpals.png"/>
                 <div class="thumb-image-dim" style="background-color: #3a4937"></div>
             </div>
-            <p class="thumb-title">The Last Pals</p>
-            <p class="thumb-desc">Wisely gather your company and beat an opponent</p>
-            <div class="thumb-links-pane">
-                <p class="thumb-available-text">Play it now on:</p>
-                <div style="display: inline-block">
-                    <a class="btn-app-link web" target="_blank"
-                       href="http://crashinvaders.com/thelastpals"></a>
+            <div class="feature-frame">
+                <p class="thumb-title">The Last Pals</p>
+                <p class="thumb-desc">Wisely gather your company and beat an opponent</p>
+                <div class="thumb-links-pane">
+                    <p class="thumb-available-text">Play it now on:</p>
+                    <div style="display: inline-block">
+                        <a class="btn-app-link web" target="_blank"
+                           href="http://crashinvaders.com/thelastpals"></a>
+                    </div>
+                    <div class="thumb-release-date-text">--- 2015 ---</div>
                 </div>
-                <div class="thumb-release-date-text">--- 2015 ---</div>
             </div>
         </div>
 
@@ -274,15 +288,17 @@
                 <img class="thumb-icon" src="images/icon-gdx-tp.png"/>
                 <div class="thumb-image-dim" style="background-color: #4f4f4f"></div>
             </div>
-            <p class="thumb-title" style="font-size: 22px; margin-bottom: 6px">GDX Texture Packer</p>
-            <p class="thumb-desc">Packs and manages texture atlases for LibGDX game framework</p>
-            <div class="thumb-links-pane">
-                <p class="thumb-available-text">Get it now on:</p>
-                <div style="display: inline-block">
-                    <a class="btn-app-link github" target="_blank"
-                       href="https://github.com/crashinvaders/gdx-texture-packer-gui"></a>
+            <div class="feature-frame">
+                <p class="thumb-title" style="font-size: 22px; margin-bottom: 6px">GDX Texture Packer</p>
+                <p class="thumb-desc">Packs and manages texture atlases for LibGDX game framework</p>
+                <div class="thumb-links-pane">
+                    <p class="thumb-available-text">Get it now on:</p>
+                    <div style="display: inline-block">
+                        <a class="btn-app-link github" target="_blank"
+                           href="https://github.com/crashinvaders/gdx-texture-packer-gui"></a>
+                    </div>
+                    <div class="thumb-release-date-text">--- 2017 ---</div>
                 </div>
-                <div class="thumb-release-date-text">--- 2017 ---</div>
             </div>
         </div>
 
@@ -293,15 +309,17 @@
                 <img class="thumb-icon" src="images/icon-gdx-vfx.png"/>
                 <div class="thumb-image-dim" style="background-color: #513b78"></div>
             </div>
-            <p class="thumb-title">GDX VFX</p>
-            <p class="thumb-desc">LibGDX post-processing visual effects library</p>
-            <div class="thumb-links-pane">
-                <p class="thumb-available-text">Get it now on:</p>
-                <div style="display: inline-block">
-                    <a class="btn-app-link github" target="_blank"
-                       href="https://github.com/crashinvaders/gdx-vfx"></a>
+            <div class="feature-frame">
+                <p class="thumb-title">GDX VFX</p>
+                <p class="thumb-desc">LibGDX post-processing visual effects library</p>
+                <div class="thumb-links-pane">
+                    <p class="thumb-available-text">Get it now on:</p>
+                    <div style="display: inline-block">
+                        <a class="btn-app-link github" target="_blank"
+                           href="https://github.com/crashinvaders/gdx-vfx"></a>
+                    </div>
+                    <div class="thumb-release-date-text">--- 2019 ---</div>
                 </div>
-                <div class="thumb-release-date-text">--- 2019 ---</div>
             </div>
         </div>
 
