Html/css cleanup.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -212,7 +212,7 @@ v
                     </div>
                     <div class="thumb-release-date-text">--- 2016 ---</div>
                 </div>
-            </div>>
+            </div>
         </div>
 
     </div>
@@ -285,7 +285,7 @@ v
             <div class="thumb-image-container">
                 <div class="cycler"
                      data-thumb-cycle-images="images/thumb-gdx-tp0.png"></div>
-                <img class="thumb-icon" src="images/icon-gdx-tp.png"/>
+                <img class="thumb-icon square" src="images/icon-gdx-tp.png"/>
                 <div class="thumb-image-dim" style="background-color: #4f4f4f"></div>
             </div>
             <div class="feature-frame">
