Site text cleanup.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -45,8 +45,8 @@
             </p>
             <p style="text-align: justify">
                 Since 2012 we've been working on our own projects, take some freelance jobs and are
-                always open for interesting offers. Regardless of the purpose, we're glad that you've come. Feel free to
-                contact us, we would love to talk! :)
+                always open for interesting offers. Regardless of the purpose, we're glad that you've come.
+                Feel free to <a href="mailto:contact@crashinvaders.com">reach us out</a>, we would love to talk! :)
             </p>
             <p style="margin-top: 16px; text-align: right">
                 Yours Sincerely,
@@ -62,7 +62,7 @@
     </div>
 
     <div class="feature-section">
-v
+
         <div class="feature-item">
             <div class="thumb-image-container">
                 <div class="cycler" data-thumb-cycle-images="
@@ -77,7 +77,7 @@ v
             </div>
             <div class="feature-frame">
                 <p class="thumb-title">Dash React</p>
-                <p class="thumb-desc">Old fashion procedural hardcore arcade</p>
+                <p class="thumb-desc">Old fashion procedural arcade</p>
                 <div class="thumb-links-pane">
                     <p class="thumb-available-text">Re-release soon:</p>
                     <div style="display: inline-block">
@@ -138,7 +138,7 @@ v
             </div>
             <div class="feature-frame">
                 <p class="thumb-title">Seven</p>
-                <p class="thumb-desc">One of the most popular drinking games on the mobile market </p>
+                <p class="thumb-desc">One of the most popular drinking games on the mobile market</p>
                 <div class="thumb-links-pane">
                     <p class="thumb-available-text">Available now on:</p>
                     <div style="display: inline-block">
@@ -148,6 +148,11 @@ v
                            class="btn-app-link android"></a>
                     </div>
                     <div class="thumb-release-date-text">--- 2012 ---</div>
+                </div>
+                <div style="padding: 8px 0">
+                <a class="article-link" href="https://gameskeys.net/underrated-board-games-to-play-on-ios">
+                    Read a recent article
+                </a>
                 </div>
             </div>
         </div>
@@ -201,7 +206,7 @@ v
             </div>
             <div class="feature-frame">
                 <p class="thumb-title" style="font-size: 24px; margin-bottom: 6px;">Flying With Icarus</p>
-                <p class="thumb-desc">Arcade for kids with mix of greek mythology and all the things</p>
+                <p class="thumb-desc">Greek mythology flavoured arcade for kids</p>
                 <div class="thumb-links-pane">
                     <p class="thumb-available-text">Available now on:</p>
                     <div style="display: inline-block">
