Fancy element appear animations.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,6 +23,9 @@
     <title>Crashinvaders</title>
 
     <link type="text/css" href="css/index.min.css" rel="stylesheet">
+    <link type="text/css" href="css/aos.css" rel="stylesheet">
+
+    <script src="js/aos.js"></script>
 </head>
 
 <body>
@@ -166,7 +169,7 @@
 
     <div class="feature-section">
 
-        <div class="feature-item">
+        <div class="feature-item" data-aos="fade-in">
             <div class="thumb-image-container">
                 <div class="cycler" data-thumb-cycle-images="
 							  images/thumb-fridge-party0.png,
