AOS animations fine tuning.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -38,7 +38,7 @@
     <div class="ground-pile left"></div>
     <div class="ground-pile right"></div>
 
-    <div class="about-pane">
+    <div class="about-pane" data-aos="fade-right" data-aos-delay="500">
         <div>
             <p style="text-align: center">
                 Hey there stranger!
@@ -76,7 +76,7 @@
                    images/thumb-getreact4.png,
                    images/thumb-getreact5.png"></div>
                 <img class="thumb-icon" src="images/icon-getreact.png"/>
-                <div class="thumb-image-dim" style="background-color: #5880a7"></div>
+                <div class="thumb-image-dim" style="background-color: #537699"></div>
             </div>
             <div class="feature-frame">
                 <p class="thumb-title">Dash React</p>
@@ -111,7 +111,7 @@
                           images/thumb-jdog3.png,
                           images/thumb-jdog4.png"></div>
                 <img class="thumb-icon" src="images/icon-jdog.png"/>
-                <div class="thumb-image-dim" style="background-color: #9f6d08"></div>
+                <div class="thumb-image-dim" style="background-color: #a8853f"></div>
             </div>
             <div class="feature-frame">
                 <p class="thumb-title">Jolly Dog</p>
@@ -137,7 +137,7 @@
                           images/thumb-seven2.png,
                           images/thumb-seven3.png"></div>
                 <img class="thumb-icon smooth-render" src="images/icon-seven.png"/>
-                <div class="thumb-image-dim" style="background-color: #15587c"></div>
+                <div class="thumb-image-dim" style="background-color: #4d7b93"></div>
             </div>
             <div class="feature-frame">
                 <p class="thumb-title">Seven</p>
@@ -264,7 +264,7 @@
 							  images/thumb-thelastpals2.png,
 							  images/thumb-thelastpals3.png"></div>
                 <img class="thumb-icon" src="images/icon-thelastpals.png"/>
-                <div class="thumb-image-dim" style="background-color: #3a4937"></div>
+                <div class="thumb-image-dim" style="background-color: #697b66"></div>
             </div>
             <div class="feature-frame">
                 <p class="thumb-title">The Last Pals</p>
@@ -294,7 +294,7 @@
                 <div class="cycler"
                      data-thumb-cycle-images="images/thumb-gdx-tp0.png"></div>
                 <img class="thumb-icon square" src="images/icon-gdx-tp.png"/>
-                <div class="thumb-image-dim" style="background-color: #4f4f4f"></div>
+                <div class="thumb-image-dim" style="background-color: #999290"></div>
             </div>
             <div class="feature-frame">
                 <p class="thumb-title" style="font-size: 22px; margin-bottom: 6px">GDX Texture Packer</p>
@@ -315,7 +315,7 @@
                 <div class="cycler"
                      data-thumb-cycle-images="images/thumb-gdx-vfx0.png"></div>
                 <img class="thumb-icon" src="images/icon-gdx-vfx.png"/>
-                <div class="thumb-image-dim" style="background-color: #513b78"></div>
+                <div class="thumb-image-dim" style="background-color: #69558d"></div>
             </div>
             <div class="feature-frame">
                 <p class="thumb-title">GDX VFX</p>
@@ -333,7 +333,7 @@
 
     </div>
 
-    <div class="face-holder">
+    <div class="face-holder" data-aos="fade-up">
         <div>
             <input class="face miha" type="image" src="images/face-miha.png"
                    onclick="window.open('https://vk.com/theface')"
