Open seven article link in a new tab.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -165,7 +165,8 @@
                         <div class="thumb-release-date-text">--- 2012 ---</div>
                     </div>
                     <div style="padding: 8px 0">
-                    <a class="article-link" href="https://gameskeys.net/underrated-board-games-to-play-on-ios">
+                    <a class="article-link" target="_blank" rel="noopener noreferrer"
+                       href="https://gameskeys.net/underrated-board-games-to-play-on-ios">
                         Read a recent article
                     </a>
                     </div>
